Fix: incorrect savings graph width; rename columns in 'anchors'
* Graph width was calculated incorrectly, which caused some graph bars
  placed out of bounds of graph (because of rounding float numbers)
  Now, graph has variable width (bar width is now fixed)
* Renamed columns in anchors table: sum_old -> total; sum_new -> income
* Fix date range used in anchors calculation: do not include first day
  of new month, eg.: 1 May .. 31 May (not 1 May .. 1 Jun)

--- a/public/main.css
+++ b/public/main.css
@@ -85,7 +85,7 @@ div.main_column {
 .tags-summary-table .money,
 .summary-table .money,
 .savings-table .money {
-  font-family: monospace, Helvetica Neue;
+  font-family: Iosevka, monospace, Helvetica Neue;
   text-align: right;
 }
 svg line,
